--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "lint-staged": "^11.1.2"
+    "lint-staged": "^11.1.2",
+    "vue-eslint-parser": "^9.0.2"
   },
   "eslintConfig": {
     "root": true,
@@ -31,8 +32,10 @@
       "plugin:vue/vue3-essential",
       "eslint:recommended"
     ],
+    "parser": "vue-eslint-parser",
     "parserOptions": {
-      "parser": "@babel/eslint-parser"
+        "parser": "@babel/eslint-parser",
+        "sourceType": "module"
     },
     "rules": {}
   },
